<resources>
    <string name="app_name">Helpcenter_Support</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="chat_title">Vormats Chat</string>
    <string name="chat_description">Welkom bij Vormats. Laten we je vraag op een rijtje zetten.</string>

    <string name="helpcenter_and_support">Help and Support</string>
    <string name="backbutton_content_description">A button to go back to the previous screen. Uses a backwards pointing arrow as an image.</string>
    <string name="article_details_arrow_button_description">A arrow button that lets the user continue tot the details of the article</string>
    <string name="exitbutton_content_description">A cross button that exits the current activity/the helpcenter</string>
    <string name="probleem_zelf_oplossen">Probleem zelf oplossen</string>
    <string name="chat_met_een_expert">Chat met een expert</string>
    <string name="chat_inbox">Chat inbox</string>
    <string name="contact">Contact</string>
    <string name="inbox">Inbox</string>
    <string name="virtual_assistant">Eva van Vormats</string>
    <string name="doe_oefeningen">Doe oefeningen</string>
    <string name="boek_een_webinar">Boek een webinar</string>
    <string name="contactform_button">Contact</string>
    <string name="bekijk_tips">Bekijk tips</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_articles">ArticlesActivity</string>
    <string name="title_activity_contact_form">Contact</string>
    <string name="empty_inbox">Er zijn nog geen chats gestart</string>
    <string name="typing">aan het typen..</string>
    <string name="employee">medewerker</string>
    <string name="user">gebruiker</string>
    <string name="support">Kom je er niet uit? Klik dan | hier | om te chatten met onze medewerkers</string>
    <string name="start_new_chat">Begin een nieuw gesprek</string>
    <string name="no_conversations">Nog geen berichten</string>
    <string name="no_date">today</string>
    <string name="no_messages">Nog geen berichten verzonden. Verstuur de eerste bericht.</string>

    <string-array name="support_subjects_list">
        <item>Inloggen</item>
        <item>Uitloggen</item>
        <item>Bovenloggen</item>
        <item>Onderloggen</item>
        <item>Oploggen</item>
        <item>Naastloggen</item>
        <item>Andersloggen</item>
    </string-array>

    <string name="contact_description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor</string>
    <string name="contact_helpingtext">Hoe kunnen we je helpen?</string>
    <string name="contact_hint">Type your message here</string>
    <string name="contact_button">Verstuur je bericht</string>
    <string name="message_hint">Typ een bericht…</string>
    <string name="inbox_title">Inbox</string>
    <string name="placeholder_text">Placeholder</string>
    <string name="zoeken">Zoeken</string>

</resources>