<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.ContactFormActivity">

    <ImageButton
        android:id="@+id/backbutton"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:background="@drawable/backbutton_arrow"
        android:backgroundTint="#00FFFFFF"
        android:contentDescription="@string/backbutton_content_description"
        android:scaleX="0.8"
        android:scaleY="0.8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/backbutton_arrow"
        tools:ignore="RedundantDescriptionCheck" />

    <TextView
        android:id="@+id/helpcenter_and_support_title_text"
        android:layout_width="244dp"
        android:layout_height="22sp"
        android:layout_marginBottom="34dp"
        android:layout_marginEnd="88dp"
        android:layout_marginStart="88dp"
        android:layout_marginTop="33dp"
        android:fontFamily="sans-serif"
        android:text="@string/title_activity_contact_form"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="16sp"
        android:typeface="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="33dp"
        android:background="#D1D1D1"
        app:layout_constraintTop_toBottomOf="@+id/helpcenter_and_support_title_text" />

    <Button
        android:id="@+id/btnSendMessage"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="16dp"
        android:text="@string/contact_button"
        app:cornerRadius="100sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/etMessage"
        style="@style/Theme.Helpcenter.NoActionBar"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/element_border"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/contact_hint"
        android:inputType="textMultiLine"
        android:padding="15dp"
        android:textColor="@color/black"
        android:textColorHint="@color/gray_200"
        app:layout_constraintBottom_toTopOf="@+id/btnSendMessage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spnSubjects"
        android:importantForAutofill="no" />

    <Spinner
        android:id="@+id/spnSubjects"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/element_border"
        android:entries="@array/support_subjects_list"
        android:spinnerMode="dropdown"
        android:theme="@style/mySpinnerItemSelectedStyle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvHelpText" />

    <TextView
        android:id="@+id/tvDesc"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="32dp"
        android:text="@string/contact_description"
        android:textAlignment="center"
        android:textSize="16sp"
        android:textColor="@color/gray_200"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider" />

    <TextView
        android:id="@+id/tvHelpText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        android:text="@string/contact_helpingtext"
        android:textAppearance="@style/Theme.Helpcenter"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvDesc" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:rotation="-90"
        app:layout_constraintBottom_toBottomOf="@+id/spnSubjects"
        app:layout_constraintEnd_toEndOf="@+id/spnSubjects"
        app:layout_constraintTop_toTopOf="@+id/spnSubjects"
        app:srcCompat="@drawable/backbutton_arrow" />

</androidx.constraintlayout.widget.ConstraintLayout>