<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/left_round_corners"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageButton
        android:id="@+id/backbutton"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:background="@drawable/round_button_ripple"
        android:clickable="true"
        android:contentDescription="@string/backbutton_content_description"
        android:focusable="true"
        android:scaleX="0.8"
        android:scaleY="0.8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/backbutton_arrow" />

    <ImageButton
        android:id="@+id/exit_activity_cross_button"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/round_button_ripple"
        android:clickable="true"
        android:contentDescription="@string/exitbutton_content_description"
        android:focusable="true"
        android:scaleX="0.8"
        android:scaleY="0.8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/cross_icon" />

    <TextView
        android:id="@+id/helpcenter_and_support_title_text"
        android:layout_width="244dp"
        android:layout_height="22dp"
        android:layout_marginTop="33dp"
        android:fontFamily="sans-serif"
        android:text="@string/helpcenter_and_support"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="16sp"
        android:typeface="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="33dp"
        android:background="#D1D1D1"
        app:layout_constraintTop_toBottomOf="@+id/helpcenter_and_support_title_text" />

    <Button
        android:id="@+id/probleem_zelf_oplossen_btn"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="5dp"
        android:background="?android:attr/selectableItemBackground"

        android:clickable="true"
        android:focusable="true"
        android:fontFamily="sans-serif"
        android:gravity="center_vertical|start"
        android:paddingStart="36dp"
        android:paddingEnd="36dp"
        android:text="@string/probleem_zelf_oplossen"
        android:textAllCaps="false"
        android:textColor="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view" />

    <ImageButton
        android:id="@+id/probleem_zelf_oplossen_details"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/backbutton_arrow"
        android:backgroundTint="#00FFFFFF"
        android:contentDescription="@string/article_details_arrow_button_description"
        android:rotation="180"
        android:scaleX="0.6"
        android:scaleY="0.6"
        app:layout_constraintBottom_toBottomOf="@+id/probleem_zelf_oplossen_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/probleem_zelf_oplossen_btn"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/backbutton_arrow" />

    <Button
        android:id="@+id/chat_met_een_expert_btn"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:clickable="true"
        android:focusable="true"
        android:background="?android:attr/selectableItemBackground"
        android:fontFamily="sans-serif"

        android:gravity="center_vertical|start"
        android:paddingStart="36dp"
        android:paddingEnd="36dp"
        android:text="@string/chat_met_een_expert"
        android:textAllCaps="false"
        android:textColor="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/probleem_zelf_oplossen_btn" />

    <ImageButton
        android:id="@+id/chat_met_een_expert_details"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/backbutton_arrow"
        android:backgroundTint="#00FFFFFF"
        android:contentDescription="@string/article_details_arrow_button_description"
        android:rotation="180"
        android:scaleX="0.6"
        android:scaleY="0.6"
        app:layout_constraintBottom_toBottomOf="@+id/chat_met_een_expert_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/chat_met_een_expert_btn"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/backbutton_arrow" />
    <Button
        android:id="@+id/chat_inbox_btn"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:clickable="true"
        android:focusable="true"
        android:background="?android:attr/selectableItemBackground"
        android:fontFamily="sans-serif"

        android:gravity="center_vertical|start"
        android:paddingStart="36dp"
        android:paddingEnd="36dp"
        android:text="@string/chat_inbox"
        android:textAllCaps="false"
        android:textColor="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chat_met_een_expert_btn" />

    <ImageButton
        android:id="@+id/chat_inbox_expert_details"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/backbutton_arrow"
        android:backgroundTint="#00FFFFFF"
        android:contentDescription="@string/article_details_arrow_button_description"
        android:rotation="180"
        android:scaleX="0.6"
        android:scaleY="0.6"
        app:layout_constraintBottom_toBottomOf="@+id/chat_inbox_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/chat_inbox_btn"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/backbutton_arrow" />

    <Button
        android:id="@+id/contactform_button"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="?android:attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"

        android:fontFamily="sans-serif"
        android:gravity="center_vertical|start"
        android:paddingStart="36dp"
        android:paddingEnd="36dp"
        android:text="@string/contactform_button"
        android:textAllCaps="false"
        android:textColor="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chat_inbox_btn" />

    <ImageButton
        android:id="@+id/contact_details"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/backbutton_arrow"
        android:backgroundTint="#00FFFFFF"
        android:contentDescription="@string/article_details_arrow_button_description"
        android:rotation="180"
        android:scaleX="0.6"
        android:scaleY="0.6"
        app:layout_constraintBottom_toBottomOf="@+id/contactform_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/contactform_button"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/backbutton_arrow" />

    <Button
        android:id="@+id/doe_oefeningen_btn"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="?android:attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"

        android:fontFamily="sans-serif"
        android:gravity="center_vertical|start"
        android:paddingStart="36dp"
        android:paddingEnd="36dp"
        android:text="@string/doe_oefeningen"
        android:textAllCaps="false"
        android:textColor="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/contactform_button" />

    <ImageButton
        android:id="@+id/doe_oefeningen_details"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/backbutton_arrow"
        android:backgroundTint="#00FFFFFF"
        android:contentDescription="@string/article_details_arrow_button_description"
        android:rotation="180"
        android:scaleX="0.6"
        android:scaleY="0.6"
        app:layout_constraintBottom_toBottomOf="@+id/doe_oefeningen_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/doe_oefeningen_btn"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/backbutton_arrow" />

    <Button
        android:id="@+id/boek_een_webinar_btn"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="?android:attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        android:fontFamily="sans-serif"

        android:gravity="center_vertical|start"
        android:paddingStart="36dp"
        android:paddingEnd="36dp"
        android:text="@string/boek_een_webinar"
        android:textAllCaps="false"
        android:textColor="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/doe_oefeningen_btn" />

    <ImageButton
        android:id="@+id/boek_een_webinar_details"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/backbutton_arrow"
        android:backgroundTint="#00FFFFFF"
        android:contentDescription="@string/article_details_arrow_button_description"
        android:rotation="180"
        android:scaleX="0.6"
        android:scaleY="0.6"
        app:layout_constraintBottom_toBottomOf="@+id/boek_een_webinar_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/boek_een_webinar_btn"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/backbutton_arrow" />

    <Button
        android:id="@+id/bekijk_tips_btn"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="?android:attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        android:fontFamily="sans-serif"

        android:gravity="center_vertical|start"
        android:paddingStart="36dp"
        android:paddingEnd="36dp"
        android:text="@string/bekijk_tips"
        android:textAllCaps="false"
        android:textColor="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/boek_een_webinar_btn" />

    <ImageButton
        android:id="@+id/bekijk_tips_details"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/backbutton_arrow"
        android:backgroundTint="#00FFFFFF"
        android:contentDescription="@string/article_details_arrow_button_description"
        android:rotation="180"
        android:scaleX="0.6"
        android:scaleY="0.6"
        app:layout_constraintBottom_toBottomOf="@+id/bekijk_tips_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/bekijk_tips_btn"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/backbutton_arrow" />

</androidx.constraintlayout.widget.ConstraintLayout>