<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinatorLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/left_round_corners"
    tools:context=".ui.articles.ArticlesActivity" >

    <ImageButton
        android:id="@+id/backbutton"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:clickable="true"
        android:focusable="true"
        android:background="@drawable/round_button_ripple"
        android:contentDescription="@string/backbutton_content_description"
        android:scaleX="0.8"
        android:scaleY="0.8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/backbutton_arrow" />

    <ImageButton
        android:id="@+id/exit_activity_cross_button"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="4dp"
        android:clickable="true"
        android:focusable="true"
        android:background="@drawable/round_button_ripple"
        android:contentDescription="@string/exitbutton_content_description"
        android:scaleX="0.8"
        android:scaleY="0.8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/cross_icon" />

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="88dp"
        android:background="#D1D1D1"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/helpcenter_title"
        android:layout_width="244dp"
        android:layout_height="22sp"
        android:layout_marginTop="33dp"
        android:fontFamily="sans-serif"
        android:text="@string/probleem_zelf_oplossen"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="16sp"
        android:typeface="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/backbutton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <include
        android:id="@+id/include"
        layout="@layout/content_articles"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="100dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titlebar_bg" />

</androidx.constraintlayout.widget.ConstraintLayout>